namespace WorldGame.SceneManagement
{
    public enum ETransitionEffect
    {
        None,
        Fade,
        Wipe,
        CrossDissolve,
    }
}